# osm-rasterizer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
osm_rasterizer/: __init__.py  cli.py  crs.py  fetch.py  rasterize.py
tests/: conftest.py  test_cli.py  test_crs.py  test_fetch.py  test_rasterize.py
