[project]
name = "osm-rasterizer"
version = "0.1.1"
description = "Rasterize OpenStreetMap vector features into GeoTIFF rasters"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Andrés Camilo Zúñiga-González", email = "ancazugo@hotmail.com" },
]
keywords = ["osm", "openstreetmap", "rasterization", "geospatial", "gis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "osmnx>=2.0",
    "rasterio>=1.4",
    "geopandas>=1.0",
    "numpy>=2.0",
    "pyproj>=3.4",
    "shapely>=2.0",
    "typer>=0.15",
    "rich>=13.0",
    "scipy>=1.17.0",
]

[project.urls]
Homepage = "https://github.com/ancazugo/osm-rasterizer"
Repository = "https://github.com/ancazugo/osm-rasterizer"

[project.scripts]
osm-rasterizer = "osm_rasterizer.cli:app"

[dependency-groups]
dev = ["pytest>=9.0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires live Overpass network access"]
